fix: remove dead link from example

--- a/config/config.json.example
+++ b/config/config.json.example
@@ -1,5 +1,5 @@
 {
     "owners": ["DISCORD_USER_ID"],
-    "webhookUrl": "https://discord.com/api/webhooks/1016743248028520470/_tF0C79QCQm9bREAwEnFnQ7UTgBUHt03RuSjz8F1UzpXcQ__NDiqz8sxIdtmE2_BSROw222",
+    "webhookUrl": "LINK HERE",
     "inviteUrl": "LINK HERE"
 }
